[workspace]
resolver = "2"
members = [
  "contracts/storage",
  "contracts/erc721",
  "contracts/mlh-contract",
  "contracts/mlh-marketplace",
  "contracts/erc721-example",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
soroban-sdk = { version = "20.3.2", default-features = false }
stellar-strkey = { version = "0.0.8" }
erc721 = { path = "./contracts/erc721", default-features = false }
storage = { path = "./contracts/storage" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
