[package]
name = "erc721-example"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-sdk.workspace = true
erc721 = { workspace = true, default-features = false, features = ["metadata"] }
