[package]
name = "erc721"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "erc721"
path = "./src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
storage = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["enumerable", "metadata", "burnable"]
enumerable = []
metadata = []
burnable = []
